# manage-main

./: .gitignore
backend/: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
backend/app/: app.py  config.py  database.py  dependency.py
backend/app/enums/: errors.py
backend/app/models/: __init__.py  item.py  product.py  user.py
backend/app/repositories/: __init__.py  item_repository.py  product_repository.py  user_repository.py
backend/app/routers/: auth.py  dashboard.py  product.py
backend/app/schemas/: __init__.py  product.py  users.py
backend/app/services/: item_service.py  user_service.py
backend/app/utils/: __init__.py  auth.py
backend/scripts/: create_model.sh
frontend/: components.json  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: AppSidebar.jsx  ProtectedRoute.jsx
frontend/src/components/auth/: loginForm.jsx  registerForm.jsx
frontend/src/components/ui/: navbar.jsx
frontend/src/components/welcome/: FAQ.jsx  Features.jsx  Footer.jsx  Hero.jsx
frontend/src/constants/: config.js  errors.js
frontend/src/css/: app.css
frontend/src/pages/: DashboardPage.jsx  LoginPage.jsx  RegisterPage.jsx  WelcomePage.jsx
frontend/src/services/: api.js
