[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.17.2",
    "bcrypt>=4.0.0",
    "email-validator>=2.0.0",
    "fastapi>=0.115.0",
    "passlib>=1.7.4",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.34.0",
]
